Revert "dummy change to test github action"
This reverts commit 08e2ef350542f92995401dfdd4f4e67956cc0330.

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -5,7 +5,7 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
-\name{built from github action}
+\name{Ken Wang}
 
 \address{
     Email: \href{mailto: kenuiuc@gmail.com}{kenuiuc@gmail.com} \\
