Computer Science and Java Dev Study

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -13,8 +13,9 @@
     Linkedin: \href{http://linkedin.com/in/kenuiuc}{linkedin.com/in/kenuiuc}
 }
 \address{
-    Phone: 778-999-5114 \\
-    Address: 5860 Goldeneye Pl, Richmond BC
+    778-999-5114 \\
+    5860 Goldeneye Pl, Richmond BC \\
+    PDF: tinyurl.com/ken-resume
 }
 
 \begin{document}
@@ -30,7 +31,7 @@
 
 \begin{rSection}{Education}
 
-{Java Development Training} \hfill {2024}
+{Computer Science and Java Dev Study} \hfill {2024}
 
 {\bf University of British Columbia} \hfill {2022 - 2023}
 \\ Master of Data Science \hfill {\em{Grade 84/100}}
