--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -31,7 +31,7 @@
 
 \begin{rSection}{Education}
 
-{Computer Science and Java Dev Study} \hfill {2024}
+{Computer Science Study and Java Dev Training} \hfill {2024}
 
 {\bf University of British Columbia} \hfill {2022 - 2023}
 \\ Master of Data Science \hfill {\em{Grade 84/100}}
