--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -34,10 +34,10 @@
 {Computer Science Study and Java Dev Training} \hfill {2024}
 
 {\bf University of British Columbia} \hfill {2022 - 2023}
-\\ Master of Data Science \hfill {\em{Grade 84/100}}
+\\ Master of Data Science
 
 {\bf University of Illinois at Urbana-Champaign} \hfill {2013 - 2017}
-\\ Bachelor of Computer Science \hfill {\em{Grade 3.6/4.0}}
+\\ Bachelor of Computer Science
 
 \end{rSection}
 
