--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -21,8 +21,8 @@
 \begin{document}
 
 \begin{skillSection}{Summary}
-\item Java developer with 2+ years experience and both Computer Science and Data Science degrees
-\item Familiar with Spring Cloud microservice apps and have basic skills in big data and machine learning
+\item 3 years experience in Java backend development. Familiar with Spring Cloud microservices.
+\item Also know basic Python data analysis and JavaScript with Node.js development.
 \end{skillSection}
 
 %----------------------------------------------------------------------------------------
@@ -31,7 +31,7 @@
 
 \begin{rSection}{Education}
 
-{Computer Science Study and Java Dev Training} \hfill {2024}
+{Computer Science Study and Software Dev Training} \hfill {2024}
 
 {\bf University of British Columbia} \hfill {2022 - 2023}
 \\ Master of Data Science
@@ -48,7 +48,7 @@
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}
-{Easemob (Agora Company)} {2021 (6 months)} {Java Engineer} {Beijing China}
+{Easemob (Agora Company)} {2021} {Java Engineer} {Beijing China}
 \item Worked on a microservice-based SaaS Instant Messaging system built with Spring Cloud
 \item Implemented a prefix tree-based keyword detection service using Thrift RPC to block harmful messages
 \item Built a reactive Java SDK calling REST services with the Reactor Netty client
@@ -57,7 +57,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Datablau} {2020 - 2021 (5 months)} {Java Engineer} {Beijing China}
+{Datablau} {2020} {Java Engineer} {Beijing China}
 \item Worked on a data governance tool to analyze metadata from databases like MySQL, Postgres and Oracle
 \item Implemented the data quality module, which scans DBs and validates data with user-defined rules
 \item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
@@ -65,14 +65,14 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{ShopHitly} {2020 (5 months)} {Backend Engineer} {Taiyuan China}
-\item Worked on an early-stage E-commerce website, which sells cannabis hardware in Illinois US
+{ShopHitly} {2020} {Backend Engineer} {Beijing China}
+\item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
 \item Built REST APIs from zero to one for the inventory and messaging systems using Node.js and MongoDB
 \item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline.
 \end{rSubsection}
 
 \begin{rSubsection}
-{Yahoo} {2018 - 2019 (15 months)} {Data Engineer} {Champaign IL, USA}
+{Yahoo} {2018 - 2019} {Data Engineer} {Champaign US}
 \item Worked on a low latency OLAP system for user engagement analysis
 \item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
 \item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
@@ -82,7 +82,8 @@
 
 \begin{skillSection}{Skills}
 \item Java, Spring Boot, Spring Cloud, Hibernate, JUnit, Mockito, Maven, Tomcat
-\item MySQL, Postgres, Redis, Linux, Docker, AWS, Git, Hadoop, Node.js
+\item MySQL, Postgres, Redis, Linux, Docker, AWS, Git, Hadoop
+\item Python, JavaScript, Node.js, NumPy, pandas, scikit-learn, PyTorch
 \end{skillSection}
 
 \end{document}
