Add React in ShopHitly and Java in Yahoo
Sort and put all skills into one line

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -22,7 +22,7 @@
 
 \begin{skillSection}{Summary}
 \item 3 years experience in Java backend development. Familiar with Spring Cloud microservices.
-\item Also know basic Python data analysis and JavaScript with Node.js development.
+\item Plus experience in Python data analysis and JavaScript with Node.js/React development.
 \end{skillSection}
 
 %----------------------------------------------------------------------------------------
@@ -50,15 +50,14 @@
 \begin{rSubsection}
 {Easemob (Agora Company)} {2021} {Java Engineer} {Beijing China}
 \item Worked on a microservice-based SaaS Instant Messaging system built with Spring Cloud
-\item Implemented a prefix tree-based keyword detection service using Thrift RPC to block harmful messages
+\item Implemented a keyword detection service using Thrift RPC to block harmful messages
 \item Built a reactive Java SDK calling REST services with the Reactor Netty client
 \item Developed an envelope encryption library using AWS KMS to comply with GDPR
-\item Created a key-value store service with MySQL and Redis to store user metadata
 \end{rSubsection}
 
 \begin{rSubsection}
 {Datablau} {2020} {Java Engineer} {Beijing China}
-\item Worked on a data governance tool to analyze metadata from databases like MySQL, Postgres and Oracle
+\item Worked on data governance tools to analyze metadata from various databases
 \item Implemented the data quality module, which scans DBs and validates data with user-defined rules
 \item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
 \item Added comprehensive unit tests to existing modules using JUnit and Mockito
@@ -67,8 +66,9 @@
 \begin{rSubsection}
 {ShopHitly} {2020} {Backend Engineer} {Beijing China}
 \item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
-\item Built REST APIs from zero to one for the inventory and messaging systems using Node.js and MongoDB
-\item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline.
+\item Built REST web services for the inventory systems using Node.js and MongoDB
+\item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
+\item Simple web and mobile UI development using TypeScript and React
 \end{rSubsection}
 
 \begin{rSubsection}
@@ -76,14 +76,13 @@
 \item Worked on a low latency OLAP system for user engagement analysis
 \item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
 \item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
+\item Development in a Java-based RESTful web service for time series analytics with Druid's data
 \end{rSubsection}
 
 \end{rSection}
 
 \begin{skillSection}{Skills}
-\item Java, Spring Boot, Spring Cloud, Hibernate, JUnit, Mockito, Maven, Tomcat
-\item MySQL, Postgres, Redis, Linux, Docker, AWS, Git, Hadoop
-\item Python, JavaScript, Node.js, NumPy, pandas, scikit-learn, PyTorch
+\item Java, Spring Boot, Spring Cloud, MySQL, Postgres, Redis, Linux, Docker, Tomcat, JUnit, Mockito, Hibernate, Maven, Git, AWS, Hadoop, JavaScript, Node.js, React, Python, pandas, scikit-learn, PyTorch
 \end{skillSection}
 
 \end{document}
