--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -21,8 +21,8 @@
 \begin{document}
 
 \begin{skillSection}{Summary}
-\item 3 years experience in Java backend development. Familiar with Spring Cloud microservices.
-\item Plus experience in Python data analysis and JavaScript with Node.js/React development.
+\item PROFICIENT: 3 years in Java backend. Familiar with Spring Cloud microservices.
+\item BASIC: JavaScript with Node and React plus Python in school work.
 \end{skillSection}
 
 %----------------------------------------------------------------------------------------
@@ -82,7 +82,7 @@
 \end{rSection}
 
 \begin{skillSection}{Skills}
-\item Java, Spring Boot, Spring Cloud, MySQL, Postgres, Redis, Linux, Docker, Tomcat, JUnit, Mockito, Hibernate, Maven, Git, AWS, Hadoop, JavaScript, Node.js, React, Python, pandas, scikit-learn, PyTorch
+\item Java, Spring Boot, Spring Cloud, MySQL, Postgres, Redis, Linux, Docker, Tomcat, JUnit, Mockito, Hibernate, Maven, Git, AWS, Hadoop
 \end{skillSection}
 
 \end{document}
