put hadoop and nodejs to titles

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -64,7 +64,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{ShopHitly} {2020} {Backend Engineer} {Beijing China}
+{ShopHitly} {2020} {Node.js Engineer} {Beijing China}
 \item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
 \item Built REST web services for the inventory systems using Node.js and MongoDB
 \item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
@@ -72,7 +72,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Yahoo} {2018 - 2019} {Data Engineer} {Champaign US}
+{Yahoo} {2018 - 2019} {Hadoop Engineer} {Champaign US}
 \item Worked on a low latency OLAP system for user engagement analysis
 \item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
 \item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
