reformat summary and skills

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -21,8 +21,8 @@
 \begin{document}
 
 \begin{skillSection}{Summary}
-\item PROFICIENT: 3 years in Java backend. Familiar with Spring Cloud microservices.
-\item BASIC: JavaScript with Node and React plus Python in school work.
+\item {\bf{Proficient: }}3 years in Java backend. Familiar with Spring Cloud microservices.
+\item {\bf{Basic: }}JavaScript with Node and React, plus Python data processing in school work.
 \end{skillSection}
 
 %----------------------------------------------------------------------------------------
@@ -30,8 +30,6 @@
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Education}
-
-{Computer Science Study and Software Dev Training} \hfill {2024}
 
 {\bf University of British Columbia} \hfill {2022 - 2023}
 \\ Master of Data Science
@@ -82,7 +80,8 @@
 \end{rSection}
 
 \begin{skillSection}{Skills}
-\item Java, Spring Boot, Spring Cloud, MySQL, Postgres, Redis, Linux, Docker, Tomcat, JUnit, Mockito, Hibernate, Maven, Git, AWS, Hadoop
+\item {\bf Pro:} Java, Spring Boot, Spring Cloud, MySQL, Redis, Linux, Docker, Tomcat, Hibernate, Maven, Git
+\item {\bf Basic:} JavaScript, React, Node.js, Python, pandas, scikit-learn, PyTorch, AWS, Hadoop, Postgres
 \end{skillSection}
 
 \end{document}
