--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -46,7 +46,7 @@
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}
-{Easemob (Agora Company)} {2021} {Java Engineer} {Beijing China}
+{Java Engineer} {2021} {Easemob (Agora Company)} {Beijing China}
 \item Worked on a microservice-based SaaS Instant Messaging system built with Spring Cloud
 \item Implemented a keyword detection service using Thrift RPC to block harmful messages
 \item Built a reactive Java SDK calling REST services with the Reactor Netty client
@@ -54,7 +54,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Datablau} {2020} {Java Engineer} {Beijing China}
+{Java Engineer} {2020} {Datablau} {Beijing China}
 \item Worked on data governance tools to analyze metadata from various databases
 \item Implemented the data quality module, which scans DBs and validates data with user-defined rules
 \item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
@@ -62,7 +62,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{ShopHitly} {2020} {Node.js Engineer} {Beijing China}
+{Full-Stack Engineer} {2020} {ShopHitly} {Beijing China}
 \item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
 \item Built REST web services for the inventory systems using Node.js and MongoDB
 \item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
@@ -70,7 +70,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Yahoo} {2018 - 2019} {Hadoop Engineer} {Champaign US}
+{Data Engineer} {2018 - 2019} {Yahoo} {Champaign US}
 \item Worked on a low latency OLAP system for user engagement analysis
 \item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
 \item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
