--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -58,15 +58,15 @@
 \item Worked on data governance tools to analyze metadata from various databases
 \item Implemented the data quality module, which scans DBs and validates data with user-defined rules
 \item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
-\item Added comprehensive unit tests to existing modules using JUnit and Mockito
+\item Achieved 80\%+ unit test coverage for existing modules using JUnit and Mockito
 \end{rSubsection}
 
 \begin{rSubsection}
 {Full-Stack Engineer} {2020 (9 months)} {ShopHitly} {Beijing China}
 \item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
-\item Built REST web services for the inventory systems using Node.js and MongoDB
+\item Built REST web services for the inventory systems using Node.js, Express.js and MongoDB
 \item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
-\item Simple web and mobile UI development using TypeScript and React
+\item Implemented a simple web UI with TypeScript, React and Redux
 \end{rSubsection}
 
 \begin{rSubsection}
