push down education and bold the dates

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -5,8 +5,10 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 
+%----------------------------------------------------------------------------------------
+% CONTACT SECTION
+%----------------------------------------------------------------------------------------
 \name{Ken Wang}
-
 \address{
     Email: \href{mailto: kenuiuc@gmail.com}{kenuiuc@gmail.com} \\
     Github: \href{http://github.com/kenuiuc}{github.com/kenuiuc} \\
@@ -20,29 +22,17 @@
 
 \begin{document}
 
+%----------------------------------------------------------------------------------------
+% SMMARY SECTION
+%----------------------------------------------------------------------------------------
 \begin{skillSection}{Summary}
-\item {\bf{Proficient: }}3 years in Java backend. Familiar with Spring Cloud microservices.
-\item {\bf{Basic: }}JavaScript with Node and React, plus Python data processing in school work.
+\item {\bf{Proficient: }}3 years experience in Java backend development. Familiar with Spring Cloud microservices.
+\item {\bf{Basic: }}JavaScript with Node and React experiences, plus Python data analysis in school work.
 \end{skillSection}
 
 %----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
+% WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
-
-\begin{rSection}{Education}
-
-{\bf University of British Columbia} \hfill {2022 - 2023}
-\\ Master of Data Science
-
-{\bf University of Illinois at Urbana-Champaign} \hfill {2013 - 2017}
-\\ Bachelor of Computer Science
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
-
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}
@@ -62,11 +52,11 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Full-Stack Engineer} {2020 (9 months)} {ShopHitly} {Beijing China}
+{Full-Stack Engineer} {2020 (7 months)} {ShopHitly} {Beijing China}
 \item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
 \item Built REST web services for the inventory systems using Node.js, Express.js and MongoDB
 \item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
-\item Implemented a simple web UI with TypeScript, React and Redux
+\item Implemented a simple web UI using TypeScript, React and Redux
 \end{rSubsection}
 
 \begin{rSubsection}
@@ -79,9 +69,26 @@
 
 \end{rSection}
 
+%----------------------------------------------------------------------------------------
+% EDUCATION SECTION
+%----------------------------------------------------------------------------------------
+\begin{rSection}{Education}
+{\bf University of British Columbia} \hfill {\bf 2022 - 2023}
+\\ {Master of Data Science} \hfill {\em{Grade 84/100}}
+
+{\bf University of Illinois at Urbana-Champaign} \hfill {\bf 2013 - 2017}
+\\ {Bachelor of Computer Science} \hfill {\em{Grade 3.6/4.0}}
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+% SKILLS SECTION
+%----------------------------------------------------------------------------------------
 \begin{skillSection}{Skills}
 \item {\bf Pro:} Java, Spring Boot, Spring Cloud, MySQL, Redis, Linux, Docker, Tomcat, Hibernate, Maven, Git
 \item {\bf Basic:} JavaScript, React, Node.js, Python, pandas, scikit-learn, PyTorch, AWS, Hadoop, Postgres
 \end{skillSection}
 
 \end{document}
+
+% Master of Data Science \hfill {\em{Grade 84/100}}
+% Bachelor of Computer Science \hfill {\em{Grade 3.6/4.0}}
