Education First and No Months

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -31,45 +31,6 @@
 \end{skillSection}
 
 %----------------------------------------------------------------------------------------
-% WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
-\begin{rSection}{Work Experience}
-
-\begin{rSubsection}
-{Java Engineer} {2021 (7 months)} {Easemob (Agora Company)} {Beijing China}
-\item Worked on a microservice-based SaaS Instant Messaging system built with Spring Cloud
-\item Implemented a keyword detection service using Thrift RPC to block harmful messages
-\item Built a reactive Java SDK calling REST services with the Reactor Netty client
-\item Developed an envelope encryption library using AWS KMS to comply with GDPR
-\end{rSubsection}
-
-\begin{rSubsection}
-{Java Engineer} {2020 - 2021 (5 months)} {Datablau} {Beijing China}
-\item Worked on data governance tools to analyze metadata from various databases
-\item Implemented the data quality module, which scans DBs and validates data with user-defined rules
-\item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
-\item Achieved 80\%+ unit test coverage for existing modules using JUnit and Mockito
-\end{rSubsection}
-
-\begin{rSubsection}
-{Full-Stack Engineer} {2020 (7 months)} {ShopHitly} {Beijing China}
-\item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
-\item Built REST web services for the inventory systems using Node.js, Express.js and MongoDB
-\item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
-\item Implemented a simple web UI using TypeScript, React and Redux
-\end{rSubsection}
-
-\begin{rSubsection}
-{Data Engineer} {2018 - 2019 (15 months)} {Yahoo} {Champaign US}
-\item Worked on a low latency OLAP system for user engagement analysis
-\item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
-\item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
-\item Development in a Java-based RESTful web service for time series analytics with Druid's data
-\end{rSubsection}
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
 % EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Education}
@@ -81,6 +42,45 @@
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
+% WORK EXPERIENCE SECTION
+%----------------------------------------------------------------------------------------
+\begin{rSection}{Work Experience}
+
+\begin{rSubsection}
+{Java Engineer} {2021} {Easemob (Agora Company)} {Beijing China}
+\item Worked on a microservice-based SaaS Instant Messaging system built with Spring Cloud
+\item Implemented a keyword detection service using Thrift RPC to block harmful messages
+\item Built a reactive Java SDK calling REST services with the Reactor Netty client
+\item Developed an envelope encryption library using AWS KMS to comply with GDPR
+\end{rSubsection}
+
+\begin{rSubsection}
+{Java Engineer} {2020 - 2021} {Datablau} {Beijing China}
+\item Worked on data governance tools to analyze metadata from various databases
+\item Implemented the data quality module, which scans DBs and validates data with user-defined rules
+\item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
+\item Achieved 80\%+ unit test coverage for existing modules using JUnit and Mockito
+\end{rSubsection}
+
+\begin{rSubsection}
+{Full-Stack Engineer} {2020} {ShopHitly} {Beijing China}
+\item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
+\item Built REST web services for the inventory systems using Node.js, Express.js and MongoDB
+\item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
+\item Implemented a simple web UI using TypeScript, React and Redux
+\end{rSubsection}
+
+\begin{rSubsection}
+{Data Engineer} {2018 - 2019} {Yahoo} {Champaign US}
+\item Worked on a low latency OLAP system for user engagement analysis
+\item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
+\item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
+\item Development in a Java-based RESTful web service for time series analytics with Druid's data
+\end{rSubsection}
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
 % SKILLS SECTION
 %----------------------------------------------------------------------------------------
 \begin{skillSection}{Skills}
@@ -89,6 +89,3 @@
 \end{skillSection}
 
 \end{document}
-
-% Master of Data Science \hfill {\em{Grade 84/100}}
-% Bachelor of Computer Science \hfill {\em{Grade 3.6/4.0}}
