add HTML and CSS to skills

--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -85,7 +85,7 @@
 %----------------------------------------------------------------------------------------
 \begin{skillSection}{Skills}
 \item {\bf Pro:} Java, Spring Boot, Spring Cloud, MySQL, Redis, Linux, Docker, Tomcat, Hibernate, Maven, Git
-\item {\bf Basic:} JavaScript, React, Node.js, Python, pandas, scikit-learn, PyTorch, AWS, Hadoop, Postgres
+\item {\bf Basic:} JavaScript, React, Node.js, HTML, CSS, Python, pandas, scikit-learn, AWS, Hadoop, Postgres
 \end{skillSection}
 
 \end{document}
