--- a/ken_wang_resume.tex
+++ b/ken_wang_resume.tex
@@ -47,7 +47,7 @@
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}
-{Java Engineer} {2021} {Easemob (Agora Company)} {Beijing China}
+{Java Engineer} {Mar 2021 - Sep 2021 (7 months)} {Easemob (Agora Company)} {Beijing China}
 \item Worked on a microservice-based SaaS Instant Messaging system built with Spring Cloud
 \item Implemented a keyword detection service using Thrift RPC to block harmful messages
 \item Built a reactive Java SDK calling REST services with the Reactor Netty client
@@ -55,7 +55,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Java Engineer} {2020 - 2021} {Datablau} {Beijing China}
+{Java Engineer} {Sep 2020 - Jan 2021 (5 months)} {Datablau} {Beijing China}
 \item Worked on data governance tools to analyze metadata from various databases
 \item Implemented the data quality module, which scans DBs and validates data with user-defined rules
 \item Built REST APIs with Spring MVC to synchronize DB metadata with third-party systems
@@ -63,7 +63,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Full-Stack Engineer} {2020} {ShopHitly} {Beijing China}
+{Full-Stack Engineer} {Jan 2020 - Jul 2020 (7 months)} {ShopHitly} {Beijing China}
 \item Worked on an early-stage E-commerce website, which sells smoking hardware in Illinois US
 \item Built REST web services for the inventory systems using Node.js, Express.js and MongoDB
 \item Set up CI/CD pipelines from zero to one with Docker, AWS ECS and CodePipeline
@@ -71,7 +71,7 @@
 \end{rSubsection}
 
 \begin{rSubsection}
-{Data Engineer} {2018 - 2019} {Yahoo} {Champaign US}
+{Data Engineer} {Jan 2018 - Mar 2019 (15 months)} {Yahoo} {Champaign US}
 \item Worked on a low latency OLAP system for user engagement analysis
 \item Built ETL pipelines with Big Data technologies like Hadoop, Pig, Oozie and Hive
 \item Ingested data into Apache Druid to allow our analysts to query petabytes of data in seconds
